# barium

./: .gitignore  Cargo.toml  LICENSE  Notes.md  README.md  TODO.md  debug-client.sh  share.txt
.github/workflows/: client.yml  clippy.yml  release.yml  server.yml
client/: .gitignore  Cargo.toml
client/assets/: app.css  barium.css  barium.glade  barium.gresource.xml  net.olback.Barium.gresource.xml  net.olback.Barium.gschema.xml
client/assets/css/: app.css  windows.css
client/assets/ui/: about-dialog.glade  about-friend-dialog.glade  accept-fingerprint-dialog.glade  add-friend-dialog.glade  add-server-dialog.glade  barium.glade  cert-info-dialog.glade  edit-server-dialog.glade  main-window.glade  remove-friend-dialog.glade
client/assets/windows/: barium.manifest  barium.rc
client/data/: config.json  friends.json  identity.json
client/src/: config.rs  consts.rs  error.rs  key_pair.rs  logger.rs  macros.rs  main.rs  message.rs  panic_handler.rs  resources.rs  servers.rs
client/src.old/: error.rs  keys.rs  macros.rs  main.rs  notification.rs  resources.rs
client/src.old/data/: friend.rs
client/src.old/ui/: initial_setup.rs  utils.rs
client/src/data/: config.rs  friends.rs  identity.rs  mod.rs  server.rs  utils.rs
client/src/fs/: identity.rs  mod.rs  servers.rs
client/src/services/: connection.rs  idle_tracker.rs  main_stack.rs  main_window_events.rs  mod.rs  server.rs
client/src/ui/: add_friend_dialog.rs  add_server_dialog.rs  certificate_dialog.rs  certificate_window.rs  chat_feed.rs  chat_input.rs  chat_view.rs  edit_server_dialog.rs  friends_list.rs  initial_setup.rs  mod.rs  server_list.rs  startup_keygen.rs
client/src/utils/: fs.rs  gtk.rs  mod.rs  refcell.rs  serde.rs  server.rs  servers.rs  srv.rs  time.rs  tls_stream.rs  user_id.rs
docs/: CNAME  index.html
docs/assets/css/: barium.min.css  barium.min.css.map
docs/assets/scss/: _github-corner.scss  _main.scss  _vars.scss  barium.scss
server/: .gitignore  Cargo.toml  README.md  build.rs  config.json
server/cert/: .gitignore  GENERATE.md  gen-cert.sh
server/src/: client.rs  config.rs  error.rs  logger.rs  macros.rs  main.rs  tokio_runtime_builder.rs  utils.rs
server/src/http/: custom_404.rs  mod.rs  server_header.rs  stats.rs
server/windows/: barium-server.rc.in
shared/: Cargo.toml
shared/src/: hash.rs  lib.rs  structs.rs  types.rs
tools/: build-windows.sh  bundle-letsencrypt-cert.sh  debug-client.sh  linux-build-container.sh  windows-build-container.sh
