[package]
name = "barium-client"
version = "0.1.0-dev"
authors = ["Edwin Svensson <barium@olback.net>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12"
rand = "0.7"
rsa = { version = "0.2", features = [ "serde1" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
dirs = "2.0"
barium-shared = { path = "../shared" }
gtk = { version = "0.8", features = [ "v3_22_30" ] }
gtk_resources = "0.1.5"
gdk = "0.12"
gio = "0.8"
glib = "0.9"
libappindicator = "0.5" # Tray icon
padlock = "0.1.1-alpha"
bincode = "1.2"
# openssl = "0.10" # Used to inspect certificate, not yet implemented
native-tls = "0.2"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.1"
