[package]
name = "barium-client"
version = "0.1.0"
authors = ["Edwin Svensson <barium@olback.net>"]
description = "An end-to-end encrypted chat app without user accounts"
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base62 = { version = "0.1", package = "base-62" }
rand = "0.7"
rsa = { version = "0.3", features = [ "serde1" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
dirs = "2.0"
barium-shared = { path = "../shared" }
gtk = { version = "0.8", features = [ "v3_22_30" ] }
# gtk_resources = "0.1.5"
gdk = "0.12"
gio = "0.8"
glib = "0.9"
padlock = "0.2"
rmp-serde = "0.14"
native-tls = "0.2"
# openssl = "0.10" # Used to inspect certificate
tray-item = "0.4.0-alpha"
lazy_static = "1.4"
trust-dns-client = "0.19" # SRV lookup
chrono = "0.4"
log = "0.4"
fern = { version = "0.6", features = [ "colored" ] }

[build-dependencies]
regex = "1.3"
last-git-commit = "0.2"
