[package]
name = "barium-server"
version = "0.1.0"
authors = ["Edwin Svensson <barium@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = [ "rt-core", "rt-threaded", "macros", "time", "io-driver" ] }
padlock = "0.1.1-alpha"
barium-shared = { path = "../shared" }
bincode = "1.2"
log = "0.4"
fern = { version = "0.6", features = [ "colored" ] }
chrono = "0.4"
rsa = "0.2"
lazy_static = "1.4"
native-tls = "0.2"
ipnet = { version = "2.3", features = [ "serde" ] }
either = { version = "1.5", features = [ "serde" ] }
