[package]
name = "barium-shared"
version = "0.1.0"
authors = ["Edwin Svensson <git@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
rsa = "0.2"
sha3 = "0.8"
